--- a/jtc_services.html
+++ b/jtc_services.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 <head>
 <!--
@@ -7,16 +7,19 @@
     Case Problem 1
     
     Jacobs Tree Care Services
-    Author: 
-    Date:   
+    Author: Caleb Snow
+    Date:   8-21-18
 
     Filename: jtc_services.html
 	-->
-
+<meta charset="utf-8"/>
+<title>Services</title>
+<link
 </head>
 
 <body>
-
+    <header>Jedd Tree Care Services</header>
+    
 </body>
 
 </html>
